--- a/index.html
+++ b/index.html
@@ -3,19 +3,29 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Meta tags for SEO -->
 	<meta name="description" content="Bob Boberson is a full-stack developer based in Bobtown, USA.">
   	<meta name="keywords" content="full-stack, developer, engineer, professional, web development">
   	<meta name="author" content="Bob Boberson">
+  	<!-- Favicon -->
+  	<link rel="apple-touch-icon" sizes="180x180" href="./imgs/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./imgs/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./imgs/favicon/favicon-16x16.png">
+	<link rel="manifest" href="./imgs/favicon/site.webmanifest">
+	<!-- CSS -->
+	<link rel="stylesheet" href="style.css">
+	<!-- DaisyUI CDN -->
 	<link href="https://cdn.jsdelivr.net/npm/daisyui@2.46.0/dist/full.css" rel="stylesheet" type="text/css" />
 	<script src="https://cdn.tailwindcss.com"></script>
+	<!-- DaisyUI theme -->
 	<html data-theme="synthwave"></html>
 	<title>Bob Boberson</title>
 </head>
 <body>
-	<!-- Navbar -->
-	<div class="navbar bg-base-100">
+	<!-- Navbar, desktop view -->
+	<div class="navbar bg-base-100" id="desktop">
 	  <div class="flex-1">
-	    <a class="btn btn-ghost normal-case text-xl">Bob Boberson</a>
+	    <span class="normal-case text-xl"><strong>Bob Boberson</strong></span>
 	  </div>
 	  <div class="flex-none">
 	    <ul class="menu menu-horizontal px-1">
@@ -26,21 +36,40 @@
 	    </ul>
 	  </div>
 	</div>
+	<!-- Navbar, mobile view -->
+	<div class="navbar bg-base-100" id="mobile">
+	  <div class="navbar-start">
+	    <div class="dropdown">
+	      <label tabindex="0" class="btn btn-ghost btn-circle">
+	        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg>
+	      </label>
+	      <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52">
+	        <li><a href="#">Home</a></li>
+	        <li><a href="#about">About</a></li>
+		    <li><a href="#works">Works</a></li>
+		    <li><a href="#contact">Contact</a></li>
+	      </ul>
+	    </div>
+	  </div>
+	  <div class="navbar-center">
+	    <span class="normal-case text-xl"><strong>Bob Boberson</strong></span>
+	  </div>
+	</div>
 
 	<!-- Hero section -->
-	<div class="hero min-h-screen bg-base-200">
+	<div class="hero min-h-screen" style="background-image: url(./imgs/layered-waves-haikei.svg);">
   		<div class="hero-content flex-col lg:flex-row-reverse">
-    		<img src="https://images.unsplash.com/photo-1566753323558-f4e0952af115?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1442&q=80" class="max-w-sm rounded-lg shadow-2xl" />
+    		<img src="./imgs/bob.jpg" class="max-w-sm rounded-lg shadow-2xl" />
     	<div>
       <h1 class="text-5xl font-bold">Bob Boberson</h1>
       	<p class="py-6">Software engineer. Coffee lover. Destiny 2 addict. Ask me about my K/D ratio.</p>
-      <button class="btn btn-primary">View My Works</button>
+      <button class="btn btn-primary"><a href="#works">View My Works</a></button>
     		</div>
   		</div>
 	</div>
 
 	<!-- About -->
-	<div class="hero min-h-screen" style="background-image: url(https://images.unsplash.com/photo-1605379399642-870262d3d051?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1806&q=80);">
+	<div class="hero min-h-screen" style="background-image: url(./imgs/about.jpg);">
 	  <div class="hero-overlay bg-opacity-60"></div>
 	  <div class="hero-content text-left text-neutral-content">
 	    <div class="max-w-md">
@@ -58,14 +87,14 @@
 	</div>
 
 	<!-- Works -->
-	<div class="hero min-h-screen bg-base-200">
+	<div class="hero min-h-screen" style="background-image: url(./imgs/polygon-scatter-haikei.svg);">
   		<div class="hero-content text-center">
     		<div class="max-w-md">
       			<h1 class="text-5xl font-bold" id="works">Works</h1>
       				<p class="py-6 text-2xl">Welcome to my portfolio! Here you will find a selection of my projects that demonstrate my skills and experience as a software developer. Each project includes a brief description, a screenshot, and a link to the live site.</p>
 
       				<div class="card lg:card-side bg-base-100 shadow-xl">
-  						<figure><img src="https://imgs.search.brave.com/mICpXpTzdsUZDy-43IbGht670mhX9hXGJjoSSNLggWk/rs:fit:195:195:1/g:ce/aHR0cHM6Ly9kMXlq/am5weDBwNTNzOC5j/bG91ZGZyb250Lm5l/dC9zdHlsZXMvbG9n/by10aHVtYm5haWwv/czMvMDkyMDE1L2dv/b2dsZV9sb2dvXzIw/MTUucG5nP2pDd3k1/OHFRRVRTb21HUWta/aFBIRURoYkpWUHU5/ZTE4Jml0b2s9ZVE5/eVZILW0" alt="Google.com's landing page"/></figure>
+  						<figure><img src="./imgs/google.png" alt="Google's logo"/></figure>
   						<div class="card-body">
     						<h2 class="card-title">Google</h2>
     							<p>Here is the landing page I designed and coded for Alphabet.</p>
@@ -78,7 +107,7 @@
 					<br>
 
 					<div class="card lg:card-side bg-base-100 shadow-xl">
-  						<figure><img src="https://imgs.search.brave.com/njpGY0IhvhI0vRIXsgv0ieuP55yxDYJRXYAjQtJDJak/rs:fit:128:128:1/g:ce/aHR0cDovL3NlYXJj/aGVuZ2luZWxhbmQu/Y29tL2ZpZ3ovd3At/Y29udGVudC9zZWxv/YWRzLzIwMTIvMDMv/YW1hem9uLWxvZ28t/aWNvbi5wbmc" alt="Amazon.com's landing page"/></figure>
+  						<figure><img src="./imgs/amazon.png" alt="Amazon's logo'"/></figure>
   						<div class="card-body">
     						<h2 class="card-title">Amazon</h2>
     							<p>During my time working at Amazon, I redesigned the company website.</p>
@@ -91,7 +120,7 @@
 					<br>
 
 					<div class="card lg:card-side bg-base-100 shadow-xl">
-  						<figure><img src="https://imgs.search.brave.com/07l3SoUy9ZMJXVkLGDZM0YyfdQ72OwGlrX60azX6MQI/rs:fit:162:185:1/g:ce/aHR0cDovL3ZpZ25l/dHRlMy53aWtpYS5u/b2Nvb2tpZS5uZXQv/bG9nb3BlZGlhL2lt/YWdlcy84LzgzL1R3/aXRjaF9pY29uLnN2/Zy9yZXZpc2lvbi9s/YXRlc3Qvc2NhbGUt/dG8td2lkdGgtZG93/bi8xNjI_Y2I9MjAx/NDA3MjcxODA3MDA" alt="Twitch.tv's landing page"/></figure>
+  						<figure><img src="./imgs/twitch.png" alt="Twitch's logo'"/></figure>
   						<div class="card-body">
     						<h2 class="card-title">Twitch</h2>
     							<p>I'm very proud of my work on Twitch.tv's landing page.</p>
@@ -105,23 +134,22 @@
 	</div>
 
 	<!-- Contact -->
-	<div class="hero min-h-screen" style="background-image: url(https://images.unsplash.com/photo-1563906267088-b029e7101114?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80);">
+	<div class="hero min-h-screen" style="background-image: url(./imgs/contact.jpg);">
   		<div class="hero-content text-left">
     		<div class="max-w-md">
       			<h1 class="text-5xl font-bold" id="contact">Contact</h1>
       				<p class="py-6">I am always happy to connect with fellow professionals and those interested in my work. Whether you have a question, a comment, or just want to say hello, I would love to hear from you.</p>
-
+      				<!-- Form -->
       				<form name="contact" netlify>
-	      				<!-- <label>Name -->
 	      				<input type="text" name="name" placeholder="Name" class="input input-bordered input-primary w-full max-w-xs" />
-	      				<!-- </label> -->
 
 	      				<input type="email" name="email" placeholder="Email" class="input input-bordered input-info w-full max-w-xs" />
 
 	      				<textarea type="text" name="message" class="textarea textarea-secondary" placeholder="Message"></textarea>
 
 	      				<br>
-	      				<button type="submit" class="btn btn-primary">Submit</button>
+
+	      				<button type="submit" class="btn btn-primary" style="background-color:#e779c1;">Submit</button>
       				</form>
     		</div>
   		</div>
@@ -129,7 +157,7 @@
 
 	<footer class="footer footer-center p-10 bg-primary text-primary-content">
   		<div>
-    	<svg width="50" height="50" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" class="inline-block fill-current"><path d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z"></path></svg>
+    	<img src="./imgs/elite.png" alt="Twitch.tv's landing page" width="50" height="50"/>
     	<p class="font-bold">
       	Bob Boberson</p> 
     	<p>Copyright © 2022 &mdash; All rights reserved</p>
